syntax = "proto3";

package golem.auth;

enum AccountAction {
  VIEW_ACCOUNT = 0;
  UPDATE_ACCOUNT = 1;
  VIEW_PLAN = 2;
  CREATE_PROJECT = 3;
  DELETE_ACCOUNT = 4;
  VIEW_ACCOUNT_GRANTS = 5;
  CREATE_ACCOUNT_GRANT = 6;
  DELETE_ACCOUNT_GRANT = 7;
  VIEW_DEFAULT_PROJECT = 8;
  LIST_PROJECT_GRANTS = 9;
  VIEW_LIMITS = 10;
  UPDATE_LIMITS = 11;
  DELETE_TOKEN = 12;
  VIEW_GLOBAL_PLUGINS = 13;
  UPDATE_GLOBAL_PLUGINS = 14;
  DELETE_GLOBAL_PLUGIN = 15;
}
